objects/AM_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>API_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>API CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>API TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AM Checklists</relationshipLabel>
        <relationshipName>AM_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Book_Segmentation_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Address Book Segmentation CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Book_Segmentation_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Address Book Segmentation TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advanced_Registration_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Multiple Registration Paths CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_Registration_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Multiple Registration Paths TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advanced_Web_Design_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Advanced Web Design CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_Web_Design_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Advanced Web Design TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Backend_Onsite_Srv_AMI_Partner_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backend/Onsite Srv (AMI/Partner) CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backend_Onsite_Srv_AMI_Partner_TB__c</fullName>
        <label>Backend/Onsite Srv (AMI/Partner) TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Branding_Package_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Branding Package CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branding_Package_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Branding Package TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Budget CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Budget TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSN_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSN CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSN_TB__c</fullName>
        <label>CSN TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Center_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Center CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Center_TB__c</fullName>
        <label>Call Center TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cliqbooks_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Cliqbook CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cliqbooks_TB__c</fullName>
        <label>Cliqbook TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Graphics_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Graphics CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Graphics_TB__c</fullName>
        <label>Custom Graphics TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Reports_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Reports CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Reports_TB__c</fullName>
        <label>Custom Reports TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dashboards_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Dashboards CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dashboards_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Dashboards TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventBuilder_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EventBuilder CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventBuilder_TB__c</fullName>
        <label>EventBuilder TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Approval_Process_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Event Approval Process CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Approval_Process_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Event Approval Process TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Credits_Module_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Event Credits Module CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Credits_Module_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Event Credits Module TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Events_Calendar_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Events Calendar CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Events_Calendar_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Events Calendar TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GL_Codes_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>GL Codes CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GL_Codes_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>GL Codes TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GetThere_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>GetThere CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GetThere_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>GetThere TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Item_TB__c</fullName>
        <label>Group Item TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Items_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Items CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HTTP_Posting_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>HTTP Post CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HTTP_Posting_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>HTTP Post TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Housing_Travel_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Housing &amp; Travel CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Housing_Travel_TB__c</fullName>
        <label>Housing &amp; Travel TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Increased_Contacts_in_Address_Book_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Increased Contacts in Address Book CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Increased_Contacts_in_Address_Book_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Increased Contacts in Address Book TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Increased_Emails_Sent_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Increased Emails Sent CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Increased_Emails_Sent_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Increased Emails Sent TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Increased_Graphics_Storage_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Increased Graphics Storage CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Increased_Graphics_Storage_TB__c</fullName>
        <label>Increased Graphics Storage TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ListBuilder_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ListBuilder CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ListBuilder_TB__c</fullName>
        <label>ListBuilder TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onsite_Training_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite Training CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onsite_Training_TB__c</fullName>
        <label>Onsite Training TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <label>Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSG CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSG_TB__c</fullName>
        <label>PSG TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parked_Reports_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Parked Reports CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parked_Reports_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Parked Reports TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Passkey_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Passkey CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passkey_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Passkey TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Rules_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Registration Rules CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Rules_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Registration Rules TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMM_Meetings_Module_Ent_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Includes Workflow, Notifications, Triggers</description>
        <label>SMM Meetings Module - Ent CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMM_Meetings_Module_Ent_TB__c</fullName>
        <inlineHelpText>Includes Workflow, Notification, Triggers</inlineHelpText>
        <label>SMM Meetings Module - Ent TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMM_Meetings_Registration_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>SMM Meetings Module - Prof CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMM_Meetings_Registration_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>SMM Meetings Module - Prof TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Integration_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Salesforce Integration CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Integration_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Salesforce Integration TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SurveyBuilder_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SurveyBuilder CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SurveyBuilder_TB__c</fullName>
        <label>SurveyBuilder TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_TB__c</fullName>
        <label>Survey TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Table_Management_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Table Management CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Table_Management_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Table Management TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_List_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Task List CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_List_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Task List TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Logins_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>User Logins CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Logins_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>User Logins TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Webex_Integration_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Webex Integration CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webex_Integration_TB__c</fullName>
        <description>Features</description>
        <inlineHelpText>Features</inlineHelpText>
        <label>Webex Integration TB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Webex_Training_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web-based Training CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webex_Training_TB__c</fullName>
        <label>Web-based Training TB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>eMarketing_TBD_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eMarketing (TBD) CB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eMarketing_TBD_TB__c</fullName>
        <label>eMarketing (TBD) TB</label>
        <type>TextArea</type>
    </fields>
    <label>AM Checklist</label>
    <nameField>
        <displayFormat>AMC{00000}</displayFormat>
        <label>AM Checklist</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AM Checklists</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>